[tool.poetry]
name = "ilexconf"
version = "0.6.1"
description = "Configuration library for Python 🔧 Load from multiple sources"
authors = ["vduseev <vagiz@duseev.com>"]
license = "MIT"
keywords = ["configuration", "settings", "json", "yaml", "ini"]
readme = "README.md"
homepage = "https://github.com/vduseev/ilexconf"
repository = "https://github.com/vduseev/ilexconf"

[tool.poetry.dependencies]
python = "^3.8"
cleo = {version = "^0.8.1", optional = true}
"ruamel.yaml" = {version = "^0.16.12", optional = true}

[tool.poetry.extras]
console = ["cleo"]
yaml = ["ruamel.yaml"]

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.1.0"
mypy = "^0.782"
debugpy = "^1.0.0-rc.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
